minor fix on alignment for the profile bio section

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -122,6 +122,7 @@ thead th, .view-proj-link, .view-proj-link:hover{
 
 .profile-bio-right {
   position: relative;
+  text-align: center;
 }
 
 @media screen and (min-width:1152px){
@@ -136,6 +137,7 @@ thead th, .view-proj-link, .view-proj-link:hover{
   .profile-bio-right {
     width: 60%;
     order:1;
+    text-align: left;
   }
 }
 
